# terabithia-music-bridge

./: .gitignore  LICENSE.md  README.md  config.example  constructor.py  docker-compose.yml  hifi_api.py  lb_handler.py  lbz_api.py  linkapi.py  main.py  models.py  pyproject.toml  squid_api.py  tagger.py  test.py  utils.py
api/: hifi_api.py  lbz_api.py
backend/: .gitignore  config.example  dockerfile  main.py  pyproject.toml
backend/api/: hifi_api.py  lbz_api.py  linkapi.py  scl_api.py
backend/blueprints/: Release Radar.json  Weekly Discovery.json
backend/core/: constructor.py  tagger.py
backend/data/: config.example
backend/models/: models.py
backend/output/reports/: Release Radar-2026-02-21.json
backend/utils/: utils.py
blueprints/: Releases Radar.json  discovery.json  radar.json
core/: tagger.py
frontend/: App.tsx  dockerfile  index.html  metadata.json  package.json  types.ts  vite.config.ts
frontend/components/: BlueprintForm.tsx  BlueprintList.tsx  Layout.tsx  ReportInfo.tsx  RunList.tsx  ScheduleList.tsx
frontend/components/ui/: Common.tsx  Icons.tsx
frontend/services/: api.ts
models/: models.py
