[project]
name = "terabithia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.2",
    "fastapi[standard]>=0.129.0",
    "liblistenbrainz",
    "local-ffmpeg>=0.1.4",
    "music-tag>=0.4.3",
    "musicbrainzngs>=0.7.1",
    "pillow>=12.1.0",
    "sqlalchemy>=2.0.46",
    "yt-dlp[default]>=2026.2.21",
]

[tool.uv.sources]
liblistenbrainz = { git = "https://github.com/moddroid94/liblistenbrainz" }
